# ESP_MusicBox

./: .gitmodules  CMakeLists.txt  Makefile  Musicbox.sln  Musicbox.vgdbproj  README.md  sdkconfig  sdkconfig.old
components/lvgl/: lv_conf.h
components/lvgl_esp32_drivers/: lvgl_helpers.h  lvgl_spi_conf.h
components/lvgl_esp32_drivers/lvgl_tft/: CMakeLists.txt  Kconfig  disp_driver.c  st7796s.c
main/: CMakeLists.txt  display.h  main.c  main.cpp
main/lvglext/: arc.h  button.h  control.h  events.h  label.h  lvgl.h  screen.h  style.h  widget.h
